force-app/main/default/objects/CEMS_Pre_Screening__c/CEMS_Pre_Screening__c.object-meta.xml
<CustomObject>
    <label>Pre-Screening</label>
    <nameField>
        <label>Exam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pre-Screening</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>