force-app/main/default/objects/CEMS_Pre_Screening__c/fields/CEMS_Email__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Email__c</fullName>
    <formula>CEMS_Job_Application_ID__r.CEMS_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>