force-app/main/default/objects/CEMS_Pre_Screening__c/fields/CEMS_Exam_Description__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Exam_Description__c</fullName>
    <label>Exam Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>