force-app/main/default/objects/CEMS_Pre_Screening__c/fields/CEMS_Exam_Duration__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Exam_Duration__c</fullName>
    <label>Exam Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>45 Min</fullName>
            </value>
            <value>
                <fullName>60 Min</fullName>
            </value>
            <value>
                <fullName>90 Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>