force-app/main/default/objects/CEMS_Pre_Screening__c/fields/CEMS_Exam_Questions_URL__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Exam_Questions_URL__c</fullName>
    <label>Exam Questions URL</label>
    <type>Url</type>
</CustomField>