force-app/main/default/objects/CEMS_Pre_Screening__c/fields/CEMS_Job_Application_ID__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Job_Application_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Application ID</label>
    <referenceTo>CEMS_Job_Application__c</referenceTo>
    <relationshipLabel>Pre-Screening</relationshipLabel>
    <relationshipName>Pre_Screening</relationshipName>
    <type>Lookup</type>
</CustomField>