force-app/main/default/objects/CEMS_Pre_Screening__c/fields/CEMS_Passing_Score__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Passing_Score__c</fullName>
    <label>Passing Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>