force-app/main/default/objects/CEMS_Pre_Screening__c/fields/CEMS_Position_Name__c.field-meta.xml
<CustomField>
    <fullName>CEMS_Position_Name__c</fullName>
    <formula>CEMS_Job_Application_ID__r.CEMS_Job_Opening__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position Name</label>
    <type>Text</type>
</CustomField>