force-app/main/default/objects/CEMS_Pre_Screening__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <label>Email Notification</label>
    <length>15</length>
    <type>Text</type>
</CustomField>